--- a/.github/workflows/pull.yml
+++ b/.github/workflows/pull.yml
@@ -203,6 +203,13 @@ jobs:
       docker-image-name: pytorch-linux-xenial-py3-clang5-asan
       build-generates-artifacts: false
 
+  linux-jammy-cuda-11_6-py3_8-clang12-build:
+    name: linux-jammy-cuda-11.6-py3.8-clang12
+    uses: ./.github/workflows/_linux-build.yml
+    with:
+      build-environment: linux-jammy-cuda-11.6-py3.8-clang12
+      docker-image-name: pytorch-linux-jammy-cuda-11.6-py3.8-clang12
+
   linux-xenial-py3-clang5-mobile-custom-build-static:
     name: linux-xenial-py3-clang5-mobile-custom-build-static
     uses: ./.github/workflows/_linux-build.yml
