[PyTorch] Add fused kernel for binary_cross_entropy_with_logits
I noticed this does a ton of extra dispatches (and, on CUDA, kernel launches), so I'm adding fused kernels.

Differential Revision: [D36650625](https://our.internmc.facebook.com/intern/diff/D36650625/)

**NOTE FOR REVIEWERS**: This PR has internal Facebook specific changes or comments, please review them on [Phabricator](https://our.internmc.facebook.com/intern/diff/D36650625/)!

ghstack-source-id: 157315106
Pull Request resolved: https://github.com/pytorch/pytorch/pull/78267

--- a/aten/src/ATen/native/native_functions.yaml
+++ b/aten/src/ATen/native/native_functions.yaml
@@ -959,6 +959,8 @@
   device_check: NoCheck   # TensorIterator
   variants: function
   dispatch:
+    CPU: binary_cross_entropy_with_logits_cpu
+    CUDA: binary_cross_entropy_with_logits_cuda
     CompositeExplicitAutograd: binary_cross_entropy_with_logits
 
 - func: binary_cross_entropy_with_logits_backward(Tensor grad_output, Tensor self, Tensor target, Tensor? weight=None, Tensor? pos_weight=None, int reduction=Mean) -> Tensor
